# rompy-notebooks

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
data/: README.md
docs/: README.md  installation_guide.md  usage_guide.md
notebooks/common/: rompy_core_features.py
notebooks/swan/: README.md
notebooks/xbeach/: README.md  bathy-demo.ipynb  bulk-forcing-demo.ipynb  data-demo.ipynb  example_declarative.ipynb  example_declarative.yml  example_procedural.ipynb  forcing-demo.ipynb  grid-demo.ipynb  grid-expanding.ipynb  lorne-2025-demo.ipynb  output-demo.ipynb  output_demo.ipynb  physics-demo.ipynb  source-demo.ipynb  wave-boundary-demo.ipynb
notebooks/xbeach/example_declarative/run1/: bathy.txt  data-20230101T000000-20230102T000000.txt  jonstable-20230101T000000-20230102T000000.txt  params.txt  tide-20230101T000000-20230102T000000.txt  xdata.txt  ydata.txt
rompy_notebooks/: __init__.py
rompy_notebooks/common/: README.md
rompy_notebooks/notebooks_data/: README.md
rompy_notebooks/notebooks_data/common/: rompy_core_features.ipynb
rompy_notebooks/notebooks_data/schism/: README.md
tests/: conftest.py
